<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Random</string>
    <string name="previous">Previous</string>
    <string name="ranDisplay">0</string>
    <string name="Hello_world">0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toast_button_text">Toast</string>
    <string name="Count">Count</string>
    <string name="sent">Here is a random number\nbetween 0 and %d.</string>

</resources>